src/routes/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* nunito-200 - latin */
@font-face {
	font-family: 'Nunito';
	font-style: normal;
	font-weight: 200;
	src: local(''), url('../fonts/nunito-v25-latin-200.woff2') format('woff2'),
		/* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/nunito-v25-latin-200.woff')
			format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* nunito-regular - latin */
@font-face {
	font-family: 'Nunito';
	font-style: bold;
	font-weight: 400;
	src: local(''), url('../fonts/nunito-v25-latin-regular.woff2') format('woff2'),
		/* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/nunito-v25-latin-regular.woff')
			format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* poppins-100 - latin */
@font-face {
	font-family: 'Poppins';
	font-style: normal;
	font-weight: 100;
	src: local(''), url('../fonts/poppins-v20-latin-100.woff2') format('woff2'),
		url('../fonts/poppins-v20-latin-100.woff') format('woff');
}
/* poppins-regular - latin */
/* @font-face {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 400;
  src: local(""), url("../fonts/poppins-v20-latin-regular.woff2") format("woff2"),
    url("../fonts/poppins-v20-latin-regular.woff") format("woff");
} */

/* poppins-700 - latin */
@font-face {
	font-family: 'Poppins';
	font-style: bold;
	font-weight: 700;
	src: local(''), url('../fonts/poppins-v20-latin-700.woff2') format('woff2'),
		url('../fonts/poppins-v20-latin-700.woff') format('woff');
}
/* poppins-900 - latin */
/* @font-face {
  font-family: "Poppins";
  font-style: bold;
  font-weight: 900;
  src: local(""), url("../fonts/poppins-v20-latin-900.woff2") format("woff2"),
      url("../fonts/poppins-v20-latin-900.woff") format("woff");
} */

/* OLD WAY: link import flickers on page load */
/* @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Poppins:wght@100&display=swap'); */
/* dec12,2022: this doesnt seem to work anymore */

/* Using html instead of body here (and documentElement instead of body when referencing with classList), since flash of content persists on firefox ... this works in all cases  */
:root {
	--light: #f7f7f7;
	--dark: rgb(20, 13, 33);
	/* --light_darkened: rgb(224, 229, 232); */
	/* --dark_lightened: rgb(38, 35, 51); */
}

html {
	background: var(--light);
	color: var(--dark);
	transition: background-color 0.3s;
}

html.dark-mode {
	background: var(--dark);
	color: var(--light);
}

/* body .disableScrollOnThisPage { */
body:has(.disableScrollOnThisPage) {
	overflow: hidden;
}

/* hide scrollbar Firefox */
/* html {
  scrollbar-width: none; 
} */
/* hide scrollbar Chrome, Safari, Opera */
/* body::-webkit-scrollbar {
  display: none; 
} */
body {
	/* -ms-overflow-style: none;  */
	/* hide scrollbar IE and Edge */

	/* overscroll-behavior-y: none; */ /* TODO: what does this do?? */

	/* --anchor: rgb(253, 148, 148); */
	/* --anchor_hover: rgb(249, 87, 87); */

	-webkit-tap-highlight-color: transparent;
	/* -webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
	/* removes gray background when clicking buttons; for native app feel*/

	/* -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none; */
	user-select: none;
	/* removes user highlighting; for native app feel */
}

/* Hide desktop horizontal scrollbar for navbar */
.hideScrollBar::-webkit-scrollbar {
	display: none; /* .. for Chrome, Safari and Opera  */
}

.hideScrollBar {
	-ms-overflow-style: none; /* ...for IE and Edge */
	scrollbar-width: none; /* ....for Firefox */
}

/* Using tailwind css version instead of this. Pro: tailwind version has intellisense when hovering the code; Con: have to define the code here in the tailwind config file */
.fadeInFromNone {
	animation: fadeInFromNone 0.8s ease;
}

@keyframes fadeInFromNone {
	0% {
		/* opacity: 0; */
		display: none;
		/* filter: blur(1.5rem); */
		transform: scale(0) rotate(30deg);
	}

	100% {
		/* opacity: 1; */
		/* filter: blur(0); */
		display: block;
		transform: scale(1) rotate(0deg);
	}
}

